--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">App3</string>
+    <string name="app_name">Android Activities by Sotiroglou</string>
 </resources>
